...

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="URL: "/>
            <EditText
                android:id="@+id/text_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type your url here"/>
        </LinearLayout>

        <LinearLayout
...
                android:id="@+id/spn_number_items"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Preferences"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:textColor="@color/white"
...
