<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miCompose"
        android:icon="@drawable/preferences"
        app:showAsAction="ifRoom"
        android:title="Compose"
        android:onClick="setPreferences">
    </item>
</menu>